--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -30,6 +30,11 @@ body {
     line-height: 25px;
     border-radius: 4px;
 }
+
+.header-top a:hover{
+    color: #ff9800;
+}
+
 .header-top img.logo {
     width: 180px;
 }
