--- a/app/admin/css/index_.css
+++ b/app/admin/css/index_.css
@@ -673,3 +673,18 @@ iframe {
         left: 50%;
     }
 }
+
+.previewContainer{
+    border: 2px dashed #ccc;
+    border-radius: 6px;
+    height: 280px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.previewContainer img{
+    max-width: 100%;             
+    max-height: 100%;            
+    object-fit: contain; 
+
+}
