--- a/app/css/index_.css
+++ b/app/css/index_.css
@@ -1,6 +1,7 @@
 body { 
     margin: 0;
     font-family: "Kanit", "Roboto", sans-serif !important;
+    /* font-family: Arial, sans-serif; */
     scroll-behavior: smooth; /* ทำให้เลื่อนหน้าอย่างนุ่มนวล */
 }
   
@@ -75,7 +76,10 @@ body {
     padding-top: 10px; 
 }
 
-
+/* .carousel-inner img {
+    height: 350px;
+    object-fit: cover;
+} */
 
 
 /* Navbar Menu Styles */
@@ -83,6 +87,7 @@ body {
     position: sticky;
     top: 0;
     background-color: #fafafa;
+    /* background-color: #ff9800; */
     white-space: nowrap;
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
     font-size: 16px;
@@ -180,11 +185,11 @@ body {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    transition: transform 0.3s ease;
+    /* transition: transform 0.3s ease; */
 }
 
 .box-content img:hover {
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
 }
 
 .box-content h3 {
