--- a/app/admin/css/index_.css
+++ b/app/admin/css/index_.css
@@ -180,11 +180,11 @@ body {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    transition: transform 0.3s ease;
+    /* transition: transform 0.3s ease; */
 }
 
 .box-content img:hover {
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
 }
 
 .box-content h3 {
