--- a/app/css/news_.css
+++ b/app/css/news_.css
@@ -16,11 +16,12 @@
     overflow: hidden;
 }
 
+
 .box-image {
     flex: 0 0 auto;
     width: 100%;
-    min-height: 330px;
-    max-height: 330px;
+    min-height: 230px;
+    max-height: 230px;
     overflow: hidden;
 }
 
@@ -28,6 +29,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.box-image img:hover{
+    transform: scale(1.1);
 }
 
 .box-content {
@@ -46,6 +52,11 @@
 
 .box-news ul {
     padding-left: 20px;
+}
+
+.text-news{
+    text-decoration: none;
+    color: #555;
 }
 
 @media (max-width: 1024px) {
