--- a/app/css/origami_ai_.css
+++ b/app/css/origami_ai_.css
@@ -20,15 +20,12 @@
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-/* จัดการขนาดรูปภาพ */
 .box-origami-ai img {
     width: 100%; 
-    /* ปรับขนาดให้เต็มความกว้างของฝั่ง */
     height: auto; 
     object-fit: contain;
     margin-right: 10px;
     transition: transform 0.3s ease; 
-    /* กำหนดความนุ่มนวลและความเร็วของการขยาย */
 }
 
 .box-origami-ai ul{
@@ -37,23 +34,19 @@
 
 .box-origami-ai img:hover {
     transform: scale(1.1); 
-    /* ปรับขนาดให้ใหญ่ขึ้นเล็กน้อยเมื่อเอาเมาส์วาง */
 }
 
 
-/* จัดขนาดและการจัดวางเนื้อหา */
 .box-origami-ai > div:first-child {
     padding: 10px;
     flex: 1;
     max-width: 50%; 
-    /* จำกัดให้ครึ่งหนึ่งของความกว้างทั้งหมด */
 }
 
 .box-origami-ai > div:last-child {
     padding: 10px;
     flex: 1;
     max-width: 50%; 
-    /* จำกัดให้ครึ่งหนึ่งของความกว้างทั้งหมด */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -67,13 +60,12 @@
 @media (max-width: 768px) {
     .box-origami-ai {
         flex-direction: column; 
-        /* เปลี่ยนเป็นแนวตั้งในหน้าจอขนาดเล็ก */
         max-width: 100%;
     }
 
     .box-origami-ai > div:first-child,
     .box-origami-ai > div:last-child {
-        max-width: 100%; /* ให้ขยายเต็มพื้นที่ในแนวตั้ง */
+        max-width: 100%;
     }
 
     .box-origami-ai img {
